--- a/trunk/MarcRecordServiceSite/MarcRecordServiceSite/Web.config
+++ b/trunk/MarcRecordServiceSite/MarcRecordServiceSite/Web.config
@@ -17,6 +17,7 @@
 		<add key="webpages:Version" value="1.0.0.0"/>
 		<add key="ClientValidationEnabled" value="true"/>
 		<add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+		<add key="MarcRecordsWorkingDirectory" value="E:\WorkingData\RittenhouseWebLoader\MarcRecordsWorking\Web"/>
 	</appSettings>
 
 	<log4net>
