--- a/MarcRecordServiceApp/MarcRecordServiceApp/app.config
+++ b/MarcRecordServiceApp/MarcRecordServiceApp/app.config
@@ -12,7 +12,7 @@
 	<applicationSettings>
 		<MarcRecordServiceApp.Settings>
 			<setting name="EmailConfigDirectory" serializeAs="String">
-				<value>S:\Clients\Rittenhouse\MarcRecordService\MarcRecordServiceApp\MarcRecordServiceApp\EmailConfigs</value>
+				<value>F:\Clients\Rittenhouse\MarcProject\MarcRecordServiceApp\MarcRecordServiceApp\EmailConfigs</value>
 			</setting>
 			<setting name="DatabaseCommandTimeout" serializeAs="String">
 				<value>60</value>
@@ -30,7 +30,7 @@
 				<value>10000</value>
 			</setting>
 			<setting name="MarcFilesWorkingDirectory" serializeAs="String">
-				<value>E:\WorkingData\RittenhouseWebLoader\MarcRecordsWorking</value>
+				<value>F:\Clients\Rittenhouse\MarcProject\MarcRecordsWorking</value>
 			</setting>
 			<setting name="SiteSubDirectory" serializeAs="String">
 				<value>https://dev21.rittenhouse.com/rbd/</value>
@@ -48,7 +48,7 @@
 	</startup>
 	<log4net debug="false">
 		<appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender" >
-			<param name="File" value="E:\Log4NetLogs\RittenhouseMarcRecordService\MarcRecordServiceApp.log" />
+			<param name="File" value="F:\Clients\Rittenhouse\MarcProject\Log4Net\MarcRecord.log" />
 			<param name="AppendToFile" value="false" />
 			<rollingStyle value="Size" />
 			<maxSizeRollBackups value="100" />
@@ -68,4 +68,11 @@
 			<appender-ref ref="console" />
 		</root>
 	</log4net>
+  <system.net>
+    <mailSettings>
+      <smtp from="r2-support@technotects.com">
+        <network host="smtp.technotects.com" port="25" userName="r2-support--technotects.com" password="Techno2011" defaultCredentials="false" />
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
