--- a/MarcRecordServiceSite/MarcRecordServiceSite/Web.config
+++ b/MarcRecordServiceSite/MarcRecordServiceSite/Web.config
@@ -5,86 +5,112 @@
   -->
 
 <configuration>
-	<configSections>
-		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
-	</configSections>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+  </configSections>
 
-	<connectionStrings>
-		<add name="MarcRecordsDbConnection" connectionString="Server=technoserv04\sql2005;Database=MarcRecords;User ID=sa;Password=Techno2008;Trusted_Connection=False" />
-	</connectionStrings>
+  <connectionStrings>
+    <add name="MarcRecordsDbConnection" connectionString="Server=technoserv04\sql2005;Database=MarcRecords;User ID=sa;Password=Techno2008;Trusted_Connection=False" />
+  </connectionStrings>
 
-	<appSettings>
-		<add key="webpages:Version" value="1.0.0.0"/>
-		<add key="ClientValidationEnabled" value="true"/>
-		<add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-		<add key="MarcRecordsWorkingDirectory" value="E:\WorkingData\RittenhouseWebLoader\MarcRecordsWorking\Web"/>
-	</appSettings>
+  <appSettings>
+    <add key="webpages:Version" value="1.0.0.0"/>
+    <add key="ClientValidationEnabled" value="true"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="MarcRecordsWorkingDirectory" value="D:\Clients\Rittenhouse\MarcRecordService\WorkingData\Web"/>
+  </appSettings>
 
-	<log4net>
-		<appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
-			<file value="E:\Log4NetLogs\RittenhouseMarcRecordService\MarcRecordServiceSite.log" />
-			<appendToFile value="false" />
-			<rollingStyle value="Size" />
-			<maxSizeRollBackups value="10" />
-			<maximumFileSize value="25MB" />
-			<staticLogFileName value="true" />
-			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date [%thread] %-5level %logger.%method - %message%newline" />
-			</layout>
-		</appender>
-		<logger name="NHibernate" additivity="false">
-			<level value="WARN" />
-			<appender-ref ref="FileAppender" />
-		</logger>
-		<logger name="NHibernate.SQL" additivity="false">
-			<level value="DEBUG" />
-			<appender-ref ref="FileAppender" />
-		</logger>
-		<root>
-			<level value="DEBUG" />
-			<appender-ref ref="FileAppender" />
-		</root>
-	</log4net>
+  <log4net>
+    <appender name="baseLogger" type="log4net.Appender.RollingFileAppender">
+      <file value="D:\Clients\Rittenhouse\Log4Net\MarcRecordServiceSite.log" />
+      <appendToFile value="false" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="25MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger.%method - %message%newline" />
+      </layout>
+    </appender>
+    <appender name="console" type="log4net.Appender.ConsoleAppender, log4net">
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+      </layout>
+    </appender>
+    <appender name="SmtpAppender" type="log4net.Appender.SmtpAppender">
+      <threshold value="ERROR" />
+      <to value="KenHaberle@technotects.com, scottscheider@technotects.com" />
+      <subject value="MARC Records ERROR - DEV" />
+      <from value="r2-support@technotects.com" />
+      <smtpHost value="smtp.technotects.com" />
+      <Authentication value="Basic"/>
+      <Username value="r2-support--technotects.com"/>
+      <Password value="Techno2011"/>
+      <bufferSize value="1" />
+      <lossy value="false" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="Date: %date%newlineLevel: %-5level%newlineLogger: %logger%newlineMessage: %message%newline%newline%newline" />
+      </layout>
+    </appender>
+    <logger name="NHibernate" additivity="false">
+      <level value="WARN" />
+      <appender-ref ref="FileAppender" />
+    </logger>
+    <logger name="NHibernate.SQL" additivity="false">
+      <level value="DEBUG" />
+      <appender-ref ref="FileAppender" />
+    </logger>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="baseLogger" />
+      <appender-ref ref="SmtpAppender" />
+    </root>
+  </log4net>
+  <system.web>
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      </assemblies>
+    </compilation>
 
-	<system.web>
-		<compilation debug="true" targetFramework="4.0">
-			<assemblies>
-				<add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-			</assemblies>
-		</compilation>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/LogOn" timeout="2880" />
+    </authentication>
 
-		<authentication mode="Forms">
-			<forms loginUrl="~/Account/LogOn" timeout="2880" />
-		</authentication>
+    <pages>
+      <namespaces>
+        <add namespace="System.Web.Helpers" />
+        <add namespace="System.Web.Mvc" />
+        <add namespace="System.Web.Mvc.Ajax" />
+        <add namespace="System.Web.Mvc.Html" />
+        <add namespace="System.Web.Routing" />
+        <add namespace="System.Web.WebPages"/>
+      </namespaces>
+    </pages>
 
-		<pages>
-			<namespaces>
-				<add namespace="System.Web.Helpers" />
-				<add namespace="System.Web.Mvc" />
-				<add namespace="System.Web.Mvc.Ajax" />
-				<add namespace="System.Web.Mvc.Html" />
-				<add namespace="System.Web.Routing" />
-				<add namespace="System.Web.WebPages"/>
-			</namespaces>
-		</pages>
+  </system.web>
 
-	</system.web>
-
-	<system.webServer>
-		<validation validateIntegratedModeConfiguration="false"/>
-		<modules runAllManagedModulesForAllRequests="true"/>
-	</system.webServer>
-
-	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
-			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false"/>
+    <modules runAllManagedModulesForAllRequests="true"/>
+  </system.webServer>
+  <system.net>
+    <mailSettings>
+      <smtp>
+        <network host="smtp.technotects.com" port="25" userName="r2-support--technotects.com" password="Techno2011" defaultCredentials="false" />
+      </smtp>
+    </mailSettings>
+  </system.net>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
