--- a/trunk/MarcRecordServiceSite/MarcRecordServiceSite/Web.config
+++ b/trunk/MarcRecordServiceSite/MarcRecordServiceSite/Web.config
@@ -17,7 +17,7 @@
     <add key="webpages:Version" value="1.0.0.0"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="MarcRecordsWorkingDirectory" value="D:\Clients\Rittenhouse\MarcRecordService\WorkingData\Web"/>
+    <add key="MarcRecordsWorkingDirectory" value="D:\Clients\Rittenhouse\MarcProject\MarcRecordsWorking"/>
   </appSettings>
 
   <log4net>
