--- a/trunk/MarcRecordServiceSite/MarcRecordServiceSite/Web.config
+++ b/trunk/MarcRecordServiceSite/MarcRecordServiceSite/Web.config
@@ -18,6 +18,11 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="MarcRecordsWorkingDirectory" value="D:\Clients\Rittenhouse\MarcProject\MarcRecordsWorking"/>
+
+    <add key="R2LibraryUrl" value="http://r2library.com/Resource/Title/"/>
+    <add key="RittenhouseUrl" value="https://www.rittenhouse.com/Rbd/Products/Book.aspx?sku="/>
+    
+    
   </appSettings>
 
   <log4net>
