Made changes to the Marc Record Website. The changes DO NOT affect previous releases of Marc records. This will allow us to make changes to Rittenhouse.com and R2library.com separately without affecting current usability.
1) Will except a boolean value IsDeleteFile. (Generates a MARC Delete File)
2) Added a new parameter to the Json main class for FTP credentials. Instead of returning a file in browser it will automatically FTP the file over the credentials supplied. 
3) Added the ability to specificity custom fields at the top level and they will be in every file returned. This will help reduce the amount of data transfered for a request.

--- a/MarcRecordServiceSite/MarcRecordServiceSite/MarcRecordServiceSite.csproj
+++ b/MarcRecordServiceSite/MarcRecordServiceSite/MarcRecordServiceSite.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Infrastructure\NHibernate\Mappings\MarcRecordMap.cs" />
     <Compile Include="Infrastructure\NHibernate\Mappings\MarcRecordProviderTypeMap.cs" />
     <Compile Include="Infrastructure\NHibernate\Queries\MarcRecordQueries.cs" />
+    <Compile Include="Models\FtpService.cs" />
     <Compile Include="Models\JsonMarcRecordRequest.cs" />
     <Compile Include="Models\MarcRecordRequestItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -224,6 +225,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\MarcRecords\Download.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\MarcRecords\Ftp.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\MarcRecords\Error.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
