--- a/MarcRecordServiceSite/MarcRecordServiceSite/MarcRecordServiceSite.csproj
+++ b/MarcRecordServiceSite/MarcRecordServiceSite/MarcRecordServiceSite.csproj
@@ -135,9 +135,11 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\MarcRecordService.cs" />
+    <Compile Include="Infrastructure\NHibernate\Entities\DailyMarcRecordFile.cs" />
     <Compile Include="Infrastructure\NHibernate\Entities\MarcRecord.cs" />
     <Compile Include="Infrastructure\NHibernate\Entities\MarcRecordFile.cs" />
     <Compile Include="Infrastructure\NHibernate\Entities\MarcRecordProvider.cs" />
+    <Compile Include="Infrastructure\NHibernate\Mappings\DailyMarcRecordFileMap.cs" />
     <Compile Include="Infrastructure\NHibernate\Mappings\MarcRecordFileMap.cs" />
     <Compile Include="Infrastructure\NHibernate\Mappings\MarcRecordProviderMap.cs" />
     <Compile Include="Infrastructure\NHibernate\Mappings\MarcRecordMap.cs" />
@@ -250,7 +252,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>8090</DevelopmentServerPort>
+          <DevelopmentServerPort>47480</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
