--- a/trunk/MarcRecordServiceSite/MarcRecordServiceSite/Web.config
+++ b/trunk/MarcRecordServiceSite/MarcRecordServiceSite/Web.config
@@ -10,7 +10,8 @@
   </configSections>
 
   <connectionStrings>
-    <add name="MarcRecordsDbConnection" connectionString="Server=technoserv04\sql2005;Database=MarcRecords;User ID=sa;Password=Techno2008;Trusted_Connection=False" />
+    <!--<add name="MarcRecordsDbConnection" connectionString="Server=technoserv04\sql2005;Database=MarcRecords;User ID=sa;Password=Techno2008;Trusted_Connection=False" />-->
+    <add name="MarcRecordsDbConnection" connectionString="Server=10.0.0.32;Database=MarcRecords;User ID=sa;Password=Techno2012;Trusted_Connection=False" />
   </connectionStrings>
 
   <appSettings>
