--- a/trunk/MarcRecordServiceApp/MarcRecordServiceApp/app.config
+++ b/trunk/MarcRecordServiceApp/MarcRecordServiceApp/app.config
@@ -7,41 +7,41 @@
 		</sectionGroup>
 	</configSections>
 	<connectionStrings>
-		<add name="MarcRecordServiceApp.Settings.RittenhouseMarcDb" connectionString="server=technoserv04\sql2005;database=MarcRecords;Integrated Security=FALSE;user=rbdWebUser;pwd=pwd123;" />
-	</connectionStrings>
+  <add name="MarcRecordServiceApp.Settings.RittenhouseMarcDb" connectionString="server=technoserv04\sql2005;database=MarcRecords;Integrated Security=FALSE;user=rbdWebUser;pwd=pwd123;" />
+ </connectionStrings>
 	<applicationSettings>
 		<MarcRecordServiceApp.Settings>
-			<setting name="EmailConfigDirectory" serializeAs="String">
-				<value>F:\Clients\Rittenhouse\MarcProject\MarcRecordServiceApp\MarcRecordServiceApp\EmailConfigs</value>
-			</setting>
-			<setting name="DatabaseCommandTimeout" serializeAs="String">
-				<value>60</value>
-			</setting>
-			<setting name="MarcRecordBatchSize" serializeAs="String">
-				<value>250</value>
-			</setting>
-			<setting name="LcMarcRecordMaxProducts" serializeAs="String">
-				<value>10000</value>
-			</setting>
-			<setting name="NlmMarcRecordMaxProducts" serializeAs="String">
-				<value>10000</value>
-			</setting>
-			<setting name="RbdMarcRecordMaxProducts" serializeAs="String">
-				<value>10000</value>
-			</setting>
-			<setting name="MarcFilesWorkingDirectory" serializeAs="String">
-				<value>F:\Clients\Rittenhouse\MarcProject\MarcRecordsWorking</value>
-			</setting>
-			<setting name="SiteSubDirectory" serializeAs="String">
-				<value>https://dev21.rittenhouse.com/rbd/</value>
-			</setting>
-			<setting name="DefaultFromAddress" serializeAs="String">
-				<value>rbd@rittenhouse.com</value>
-			</setting>
-			<setting name="DefaultFromAddressName" serializeAs="String">
-				<value>Rittenhouse Customer Service</value>
-			</setting>
-		</MarcRecordServiceApp.Settings>
+   <setting name="EmailConfigDirectory" serializeAs="String">
+    <value>\\technoserv04\d$\Clients\Rittenhouse\MarcProject\MarcRecordServiceApp\MarcRecordServiceApp\EmailConfigs</value>
+   </setting>
+   <setting name="DatabaseCommandTimeout" serializeAs="String">
+    <value>60</value>
+   </setting>
+   <setting name="MarcRecordBatchSize" serializeAs="String">
+    <value>250</value>
+   </setting>
+   <setting name="LcMarcRecordMaxProducts" serializeAs="String">
+    <value>10000</value>
+   </setting>
+   <setting name="NlmMarcRecordMaxProducts" serializeAs="String">
+    <value>10000</value>
+   </setting>
+   <setting name="RbdMarcRecordMaxProducts" serializeAs="String">
+    <value>10000</value>
+   </setting>
+   <setting name="MarcFilesWorkingDirectory" serializeAs="String">
+    <value>\\technoserv04\d$\Clients\Rittenhouse\MarcProject\MarcRecordsWorking</value>
+   </setting>
+   <setting name="SiteSubDirectory" serializeAs="String">
+    <value>https://dev21.rittenhouse.com/rbd/</value>
+   </setting>
+   <setting name="DefaultFromAddress" serializeAs="String">
+    <value>rbd@rittenhouse.com</value>
+   </setting>
+   <setting name="DefaultFromAddressName" serializeAs="String">
+    <value>Rittenhouse Customer Service</value>
+   </setting>
+  </MarcRecordServiceApp.Settings>
 	</applicationSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
