--- a/MarcRecordServiceApp/MarcRecordServiceApp/app.config
+++ b/MarcRecordServiceApp/MarcRecordServiceApp/app.config
@@ -7,7 +7,8 @@
 		</sectionGroup>
 	</configSections>
 	<connectionStrings>
-  <add name="MarcRecordServiceApp.Settings.RittenhouseMarcDb" connectionString="server=technoserv04\sql2005;database=MarcRecords;Integrated Security=FALSE;user=rbdWebUser;pwd=pwd123;" />
+  <!--<add name="MarcRecordServiceApp.Settings.RittenhouseMarcDb" connectionString="server=technoserv04\sql2005;database=MarcRecords;Integrated Security=FALSE;user=rbdWebUser;pwd=pwd123;" />-->
+  <add name="MarcRecordServiceApp.Settings.RittenhouseMarcDb" connectionString="Server=10.0.0.32;Database=MarcRecords;User ID=sa;Password=Techno2012;Trusted_Connection=False" />
  </connectionStrings>
 	<applicationSettings>
 		<MarcRecordServiceApp.Settings>
