--- a/MarcRecordServiceApp/MarcRecordServiceApp/app.config
+++ b/MarcRecordServiceApp/MarcRecordServiceApp/app.config
@@ -12,13 +12,10 @@
 	<applicationSettings>
 		<MarcRecordServiceApp.Settings>
    <setting name="EmailConfigDirectory" serializeAs="String">
-    <value>\\technoserv04\d$\Clients\Rittenhouse\MarcProject\MarcRecordServiceApp\MarcRecordServiceApp\EmailConfigs</value>
+    <value>C:\Clients\Rittenhouse\MarcProject\MarcRecordServiceApp\MarcRecordServiceApp\EmailConfigs</value>
    </setting>
    <setting name="DatabaseCommandTimeout" serializeAs="String">
     <value>60</value>
-   </setting>
-   <setting name="MarcRecordBatchSize" serializeAs="String">
-    <value>10000</value>
    </setting>
    <setting name="LcMarcRecordMaxProducts" serializeAs="String">
     <value>10000</value>
@@ -30,7 +27,7 @@
     <value>1000000</value>
    </setting>
    <setting name="MarcFilesWorkingDirectory" serializeAs="String">
-    <value>\\technoserv04\d$\Clients\Rittenhouse\MarcProject\MarcRecordsWorking</value>
+    <value>C:\Clients\Rittenhouse\MarcProject\MarcRecordServiceApp\Working</value>
    </setting>
    <setting name="SiteSubDirectory" serializeAs="String">
     <value>https://dev21.rittenhouse.com/rbd/</value>
@@ -40,6 +37,9 @@
    </setting>
    <setting name="DefaultFromAddressName" serializeAs="String">
     <value>Rittenhouse Customer Service</value>
+   </setting>
+   <setting name="MarcRecordBatchSize" serializeAs="String">
+    <value>10000</value>
    </setting>
   </MarcRecordServiceApp.Settings>
 	</applicationSettings>
@@ -71,7 +71,7 @@
   <system.net>
     <mailSettings>
       <smtp from="r2-support@technotects.com">
-        <network host="smtp.technotects.com" port="25" userName="r2-support--technotects.com" password="Techno2011" defaultCredentials="false" />
+        <network host="smtp.1and1.com" port="587" userName="r2v2@technotects.net" password="R2V22013" defaultCredentials="false" />
       </smtp>
     </mailSettings>
   </system.net>
